chore: add exceptions to create task endpoint
